<resources>

    <string name="facebook_app_id" translatable="false">1664125210531403</string>
    <string name="google_maps_key_debug" templateMergeStrategy="preserve" translatable="false">AIzaSyA-K7i4sGQ272-S9Kz8Pyz90w6tRAN0l1A</string>
    <string name="google_maps_key_production" templateMergeStrategy="preserve" translatable="false">AIzaSyAaRF8zuJFSXma-RIqXYBwYppXhdF5d8kE</string>

    <string name="app_name">My Tracker</string>
    <string name="title_activity_map">My Tracker</string>
    <string name="title_activity_login">My Tracker</string>
    <string name="open">Open</string>
    <string name="close">Close</string>

    <string name="cancel">Cancel</string>
    <string name="gps_network_not_enabled">Location services are disabled</string>
    <string name="open_location_settings">Open location settings</string>

    <string name="myTracks">My tracks</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="Profile">Profile</string>


    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_facebook_sign_in">Facebook sign in</string>
    <string name="action_register">Register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="title_activity_my_tracks">My tracks</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_only_gps">Only GPS</string>
    <string name="pref_desc_only_gps">Disable other location services</string>


    <string name="pref_title_social_recommendations" translatable="false">Enable social recommendations</string>
    <string name="pref_description_social_recommendations" translatable="false">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name" translatable="false">Display name</string>
    <string name="pref_default_display_name" translatable="false">John Smith</string>

    <string name="pref_title_add_friends_to_messages" translatable="false">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync" translatable="false">Data &amp; sync</string>

    <string name="pref_title_sync_frequency" translatable="false">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings" translatable="false">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications" translatable="false">Notifications</string>

    <string name="pref_title_new_message_notifications" translatable="false">New message notifications</string>

    <string name="pref_title_ringtone" translatable="false">Ringtone</string>
    <string name="pref_ringtone_silent" translatable="false">Silent</string>

    <string name="pref_title_vibrate" translatable="false">Vibrate</string>
    <string name="getting_location">Getting location, wait please...</string>
    <string name="ready">START</string>
    <string name="tracking">Tracking</string>
    <string name="track_saved">Track saved</string>
    <string name="error_saving_track">Sorry, error saving track ;(</string>
    <string name="confirm_logout">Confirm logout</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="press_again_to_exit">Press Back again to exit</string>
    <string name="unable_to_create_map">Sorry, unable to create Maps</string>
    <string name="GPS">GPS</string>
    <string name="gps_network">GPS and Network</string>
    <string name="loading_track">Loading track</string>
    <string name="delete_selected_tracks">Delete selected track</string>
    <string name="loading_your_tracks">Loading your tracks</string>
    <string name="tracks_deleted">Tracks deleted</string>
    <string name="error_deleting_tracks">Error deleting tracks</string>
    <string name="delete_track">Delete track</string>
    <string name="insert_track_info">Insert track info here</string>
    <string name="min">Min</string>
    <string name="hours">Hours</string>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="title_activity_map2">My Tracker</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="change_password">Change password</string>
    <string name="profile">Profile</string>
    <string name="old_password">Old password</string>
    <string name="new_password">New password</string>
    <string name="change">Change</string>
    <string name="password_changed">Password changed</string>
    <string name="push_to_stop">STOP</string>
    <string name="send_to">Send to</string>
    <string name="stop_tracking">Stop tracking to exit</string>
    <string name="pref_save_frequency">Tracking frequency</string>
    <string name="pref_desc_save_frequency">Tracking accuracy in seconds (5 to 60)</string>
    <string name="ask_stop_tracking">Stop tracking?</string>
    <string name="sunday">Sunday</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="my_favorite_tracks">My favorite tracks</string>
    <string name="distance">0.0 m</string>
    <string name="time">Time</string>
    <string name="vehicle">Vehicle</string>
    <string name="activity_type">Activity type</string>



    <string-array name="spinner_vehicle">
        <item >Car</item>
        <item >Motorcycle</item>
        <item >Bicycle</item>
        <item >Running</item>
        <item >Walking</item>
    </string-array>



    <string name="com.mapbox.mapboxsdk.accessToken" translatable="false">pk.eyJ1IjoiY2lqemszMmc3MnI4OXdka2k1cWVnenN0aiIsImEiOiJjaWp6azM1bWsycjhkd2RraTVnZWZ6M3V3In0.BUb1oimHKrVdKcGBk3--lQ</string>
    <string name="export_kml">Export to KML</string>
    <string name="delete">Delete</string>
</resources>
