<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_my_tracks"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/myTracks" />

        <item
            android:id="@+id/nav_my_favorite_tracks"
            android:icon="@drawable/ic_menu_favorite"
            android:title="@string/my_favorite_tracks" />

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/settings" />

    </group>

    <item android:title="@string/Profile">

        <menu>
            <!--
            <item
                android:id="@+id/nav_password"
                android:title="@string/change_password"     />
            -->
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_account_box_black_36dp"
                android:title="@string/logout"/>
        
        </menu>
    </item>
</menu>
